# basic-c-2

./: CMakeLists.txt  calculatingPayBlank.cpp  calculatingPayFinished.cpp  cinWithVariables.cpp  codeySenseExamScores.cpp  codeySenseOutput.cpp  happyhappyhappyhappy.cpp  helloWorld.cpp  outputtingSentences.cpp  sizeof.cpp  staticcastDemo.cpp
